Fix spacing

--- a/site/pages/privacy-policy/style.css
+++ b/site/pages/privacy-policy/style.css
@@ -65,7 +65,7 @@
 .number {
   composes: boldSansSerif from '../../css/typography/_fonts.css';
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 1.3;
   font-weight: bold;
   padding: 6px 0 0;
   border-bottom: 5px solid badgerRed;
